# projects.rust

file_organizer/: Cargo.toml  README.md  tasks.md
file_organizer/src/: cli.rs  main.rs  organizer.rs  sorter.rs
hello_world/src/: main.rs
mini_http/: Cargo.toml  README.md  tasks.md
mini_http/src/: cli.rs  http.rs  main.rs  printer.rs  utils.rs
mini_http/src/cmds/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
todo_list/: Cargo.toml  README.md  tasks.md
todo_list/data/: tasks.json
todo_list/src/: cli.rs  main.rs  storage.rs
todo_list/src/cmds/: add.rs  complete.rs  list.rs  remove.rs
todo_list/src/models/: task.rs
unit_converter/: Cargo.toml  README.md  tasks.md
unit_converter/src/: cli.rs  interactive.rs  main.rs
unit_converter/src/converters/: length.rs  mod.rs  temperature.rs  weight.rs
